# gollem

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: gpt.md
experiments/: data_parallelism.py  model_parallelism.py  simple.py  tensor_parallelism_attention.py  tensor_parallelism_manual.py  tensor_parallelism_mlp.py
experiments/gpt2/: 0_gpt2_124M_on_tinyshakespeare.ipynb  1_gpt2_124M_on_tinyshakespeare_with_mps.ipynb  1_laptop.json  2_gpt2_124M_on_tinyshakespeare_with_cuda_on_rtx3090.ipynb  3_gpt2_124M_on_tinyshakespeare_with_cuda_on_H100.ipynb  42a_gpt2_124M_tensorcores.json  42b_gpt2_124M_bfloat16.json  4_gpt2_hardware_results.ipynb  4a_gpt2_124M_bfloat16.json  4b_gpt2_124M_flashattention.json  4c_gpt2_124M_compile.json  4d_gpt2_124M_fused_adamw.json  4e_gpt2_124M_tensorcores.json  5_batch_results.csv  5_gpt2_software_optimizations.ipynb  6_gpt2_124M_DDP.ipynb  7_gpt2_exps_summary.ipynb
gollem/: cli_test.py  gpu_stats.py  logger.py  main.py  tokenizer.py  train_gpt2.py  train_llama3.py  utils.py
gollem/config/: gpt2.py  model.py
gollem/data/: README.md  __init__.py  common.py  config.py  fineweb.py  hellaswag.py  loader.py  loader_test.py  tinyshakespeare.py  tinystories.py
gollem/eval/: hellaswag.py
gollem/inference/: sample_gpt.py
gollem/models/: __init__.py  config.py  gpt2.py  model.py  utils.py
gollem/models/gpt2/: config.py  model.py
gollem/models/llama3/: config.py  model.py
gollem/train/: config.py  core.py  train_gpt.py  utils.py
notebooks/: activation_checkpointing.ipynb  batch_size_calculator.ipynb  benchmarking.ipynb  dataloading.ipynb  gpt_batch_size_benchmarking.ipynb  gpt_benchmarking.ipynb  gpt_transformer_sizing.ipynb  kv_caching.ipynb  llama3_transformer_sizing.ipynb  load_llama3_from_pretrained.ipynb  rope.ipynb  transformer_sizing.ipynb
notebooks/results/: gpt2_batch_size_benchmarking.csv  gpt2_speed_benchmarking.csv
scripts/: dl_llama3.sh  measure_tensor_gpu_mem_usage.py  plot_open_source_model_timeline.py  run_batch_size_benchmarking.py  run_gpt2_124M.sh  run_gpt2_1_5B.sh  run_gpt2_batch_size_benchmarking.py  run_gpt2_speed_benchmarking.py  run_tokenizer.py  speed_test_dataloader.py  swiglu_dim_calc.py  torch_ddp_spawn.py  torch_ddp_spawn_cpu.py  torchrun_ddp.py
tests/: test_save_and_load_model.py
