[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gollem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bpython>=0.24",
    "datasets>=3.2.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "psutil>=6.1.1",
    "pyrallis>=0.3.1",
    "seaborn>=0.13.2",
    "tiktoken>=0.8.0",
    "tokenizers>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.0",
    "wandb>=0.19.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pyright>=1.1.391",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.5.1",
]
cu121 = [
  "torch>=2.5.1",
]
cu124 = [
  "torch>=2.5.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu121" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cu121" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 88
src = ["gollem"]
extend-select = ["C4", "SIM", "TCH"]
show-fixes = true
target-version = "py311"

[tool.ruff.isort]
force-single-line = true
lines-after-imports = 2
